[gd_scene load_steps=13 format=3 uid="uid://bv1v3slqxeyw8"]

[ext_resource type="Texture2D" uid="uid://1wbiieh1q05c" path="res://Assets/bunny.png" id="1_3q5oo"]
[ext_resource type="Script" path="res://Scripts/bunny.gd" id="1_q03xb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n5niv"]
atlas = ExtResource("1_3q5oo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h57bv"]
atlas = ExtResource("1_3q5oo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxbu8"]
atlas = ExtResource("1_3q5oo")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a808n"]
atlas = ExtResource("1_3q5oo")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv3qs"]
atlas = ExtResource("1_3q5oo")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_onpds"]
atlas = ExtResource("1_3q5oo")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3vdo"]
atlas = ExtResource("1_3q5oo")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_esco1"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_n5niv")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_h57bv")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxbu8")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a808n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv3qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onpds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3vdo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gjj5w"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1le2d"]
radius = 7.0

[node name="bunny" type="CharacterBody2D"]
z_index = 3
collision_layer = 10
collision_mask = 9
script = ExtResource("1_q03xb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_esco1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.29663

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_gjj5w")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_1le2d")

[node name="PositionCheckerTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="PositionCheckerTimer" to="." method="_on_position_checker_timer_timeout"]
